fix: smooth scroll on safari

--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@
   src: url("fonts/GlacialIndifference-Regular.otf") format("opentype");
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 * {
   padding: 0;
+}
+
+html {
+  --scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 a {
